<resources>
    <string name="app_name">Kilojoule Counter</string>
    <string name="action_settings">Settings</string>
    <string name="diary">DIARY</string>
    <string name="dailyAverage">Daily Average</string>
    <string name="foodTotal">Food Total</string>
    <string name="exerciseTotal">Exercise Total</string>
    <string name="dailyAverageValue">0 kJ</string>
    <string name="foodValue">0 kJ</string>
    <string name="exerciseValue">0 kJ</string>
    <string name="jogging">Jogging</string>
    <string name="snacks">Snacks</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="gym">Gym</string>
    <string name="dinner">Dinner</string>
    <string name="enter_kilojoule_estimates">Enter Kilojoule Estimates</string>
    <string name="save">SAVE</string>
    <string name="sport">Sport</string>
</resources>
